[package]
name = "weighted-median"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Calculate the weighted median"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
